Fix #9: Long lines in <pre> may not be readable
A bit of CSS does the trick.

--- a/help/stylesheet.css
+++ b/help/stylesheet.css
@@ -20,6 +20,13 @@ body {
 p {
     text-align: justify;
 }
+pre {
+    color: black;
+    background: #ffe;
+    overflow: auto;
+    padding: 0.2em 0.5em;
+    border: 1px solid silver;
+}
 nav {
     clear: both;
 }
